# MsnMigrator

./: CMakeLists.txt  MsnMigrator.pro  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  msnmigrator.cpp  msnmigrator.h  msnmigrator.ui
